--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -30,7 +30,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.2 <date>2022</date>
+                <edition>v 1.2.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-30T15:25:45.752Z" user="admin">30/09/2022 15:25:45</note>
+        <note type="lastUpdated" date-time="2022-10-01T12:21:09.472Z" user="admin">01/10/2022 12:21:09</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -114,6 +114,7 @@
           <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:45:30.942Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
           <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T16:45:30.58Z" user="john">Added material to introduction, notes, and bibliography in line with the other texts of the group.</note>
           <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:25:41.735Z" user="john">Edits to text and notes re āyurdatte/-dade.</note>
+          <note type="updated" update="text-version" value="1.2.3" date-time="2022-10-01T12:21:05.37Z" user="john">Edits on variants in 2 notes.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -697,9 +698,10 @@
               amṛtavikrānte amṛtagate amṛtagāmini amṛtāyurdatte<note place="end" xml:id="UT22084-090-039-72"> We have emended from 
                 the Degé reading here, <foreign xml:lang="Sa-Ltn" type="term">āyurdate</foreign>, to the theoretically more “correct” form 
                 <foreign xml:lang="Sa-Ltn" type="term">āyurdatte</foreign> on the basis that the latter is attested later in this same text, in the extract from this dhāraṇī repeated
-                below at <ptr target="#UT22084-090-039-92"/>. However, the alternative spelling <foreign xml:lang="Sa-Ltn" type="term">āyurdade</foreign> is 
+                below at <ptr target="#UT22084-090-039-92"/>. However, it should be noted that the alternative spelling <foreign xml:lang="Sa-Ltn" type="term">āyurdade</foreign>, attested
+                only in the Stok Palace and Phukdrak Kangyurs for this text at this point, is 
                 common elsewhere in this group of Uṣṇīṣavijayā texts, and seems to be the preponderant form in use in
-              numerous sādhanas and other texts in the Tibetan Buddhist tradition.</note> 
+                numerous sādhanas and other texts in the Tibetan Buddhist tradition. See also <ptr target="#UT22084-090-039-201"/>.</note> 
             gaganakīrtikare sarvakleśakṣayaṃ kariye<note place="end" xml:id="UT22084-090-039-73"> We read <foreign xml:lang="Sa-Ltn" type="term">kariye</foreign> following the Yongle, Lithang, Peking, and Choné Kangyurs and
                 the parallel passage from <ref target="https://read.84000.co/translation/toh594.html#UT22084-090-038-115">Toh
                   594</ref>, rather than <foreign xml:lang="Sa-Ltn" type="term">karīye</foreign> in
@@ -829,7 +831,10 @@
             full ladles. One can also perform the fire offering while reciting the dhāraṇī together
             with the life-extending and intelligence-sharpening dhāraṇī <mantra xml:lang="Sa-Ltn">oṁ
               amṛtāyurdatte svāhā</mantra>
-                        <note place="end" xml:id="UT22084-090-039-201">See <ptr target="#UT22084-090-039-72"/>.</note> eight hundred times at the three times of the day.</p>
+                        <note place="end" xml:id="UT22084-090-039-201">The spelling 
+                <foreign xml:lang="Sa-Ltn">amṛtāyurdade</foreign>, which is the preponderant form for this mantra in
+                later Tibetan works, is attested for this text only in the Stok Palace, Shey, and Phukdrak Kangyurs. See also <ptr target="#UT22084-090-039-72"/>.</note> 
+            eight hundred times at the three times of the day.</p>
           <milestone unit="chunk" xml:id="UT22084-090-039-93"/>
           <p tid="60">“If one recites the <distinct>crown victory</distinct> dhāraṇī seven times one
             will have a long life, a sharp intellect, and happiness and be free from illness. </p>
