--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-15T18:54:46.25Z" user="admin">15/09/2022 18:54:46</note>
+        <note type="lastUpdated" date-time="2022-10-01T21:49:23.362Z" user="admin">01/10/2022 21:49:23</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -121,6 +121,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-14T21:16:22.797Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-15T18:45:35.492Z" user="martina-cotter">Updated typo.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-15T18:54:42.182Z" user="martina-cotter">Updated typo.</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-01T21:49:19.246Z" user="martina-cotter">updated glossary entries</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -734,7 +735,7 @@
             the like.</p>
           <milestone unit="chunk" xml:id="UT22084-094-003-110"/>
           <p tid="99">“Mañjuśrī, the person who memorizes this praise used by all the buddhas of the
-            three times makes offerings to all of them. All the inexpiable deeds and other misdeeds
+            three times makes offerings to all of them. All the acts with immediate retribution and other misdeeds
             of the person who memorizes this will be purified, and that person will see all the
             buddhas. They will not meet an untimely death, and, when the time of death comes, they
             will see Tārā, the mother of all the buddhas of the three times. The person who
@@ -1222,8 +1223,7 @@
             seven, twenty-one, or one hundred and eight times, and make a request, it will be
             fulfilled.</p>
           <milestone unit="chunk" xml:id="UT22084-094-003-225"/>
-          <p tid="186">“Mañjuśrī, the benefits of this are such that the five inexpiable deeds, the
-            five secondary inexpiable deeds, and all hostility and nightmares will be pacified.
+          <p tid="186">“Mañjuśrī, the benefits of this are such that the five acts with immediate retribution, the five secondary acts with immediate retribution, and all hostility and nightmares will be pacified.
             Mañjuśrī, the benefits of this are such that the suffering of the three lower realms
             will be pacified, and you will never again be reborn in any of the eight unfree states.
             Mañjuśrī, the benefits of this are such that you will come to remember your past lives,
@@ -1710,8 +1710,7 @@
                     </p>
           <p tid="273">“While chanting these, offer one hundred and eight handfuls of water.</p>
           <milestone unit="chunk" xml:id="UT22084-094-003-334"/>
-          <p tid="274">“Mañjuśrī, the benefits of this are such that misdeeds, including the
-            inexpiable deeds, will be pacified, infectious diseases, harmful spirits, and the like
+          <p tid="274">“Mañjuśrī, the benefits of this are such that misdeeds, including the acts with immediate retribution, will be pacified, infectious diseases, harmful spirits, and the like
             will all be pacified, and you will recall all your past lives in each of your rebirths.
               <ref cRef="F.214.a" type="folio" xml:id="UT22084-094-003-594"/>
                     </p>
@@ -2398,7 +2397,7 @@
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-094-003-459">
-              <term>five inexpiable deeds</term>
+            <term>five acts with immediate retribution</term>
               <term xml:lang="Bo-Ltn" status="verified">mtshams med pa lnga </term>
               <term xml:lang="bo">མཚམས་མེད་པ་ལྔ།</term>
               <term xml:lang="Sa-Ltn" status="verified">pañcānantarya</term>
@@ -2410,16 +2409,16 @@
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-094-003-460">
-              <term>inexpiable deeds</term>
+            <term>Acts with immediate retribution</term>
               <term xml:lang="Bo-Ltn" status="verified">mtshams med pa </term>
               <term xml:lang="bo">མཚམས་མེད་པ།</term>
               <term xml:lang="Sa-Ltn" status="verified">ānantarya</term>
-              <term type="definition">See “five inexpiable deeds.”</term>
+            <term type="definition">See “five acts with immediate retribution.”</term>
             </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-094-003-461">
-              <term>five secondary inexpiable deeds</term>
+            <term>five secondary acts with immediate retribution</term>
               <term xml:lang="Bo-Ltn" status="verified">mtshams med pa lnga dang de dang nye ba lnga </term>
               <term xml:lang="bo">མཚམས་མེད་པ་ལྔ་དང་དེ་དང་ཉེ་བ་ལྔ།</term>
               <term xml:lang="Sa-Ltn" status="verified">pañcopānantarīya</term>
