--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -32,9 +32,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:00:21.686Z" user="admin">20/12/2019 13:00:21</note>
+                <note type="lastUpdated" date-time="2022-10-03T10:06:49.499Z" user="admin">03/10/2022 10:06:49</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
