--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -4,21 +4,16 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
-          Manual</title>
+        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual (2)</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayādhāraṇīkalpasahitā</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
-          pa</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas pa</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
-          Dhāraṇī with Its Ritual Manual</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata-uṣṇīṣavijayānāmadhāraṇīkalpasahitā</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
+        <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata­uṣṇīṣavijayānāmadhāraṇīkalpasahitā</title>
         <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
         <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
+        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
@@ -30,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.3 <date>2022</date>
+                <edition>v 1.2.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-01T12:21:09.472Z" user="admin">01/10/2022 12:21:09</note>
+        <note type="lastUpdated" date-time="2022-10-03T10:11:43.96Z" user="admin">03/10/2022 10:11:43</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -111,10 +106,11 @@
         <note type="updated" update="text-version" value="0.0.03" date-time="2022-07-04T10:00:46.847Z" user="sameer">0.0.03</note>
         <note type="updated" update="translation-status" value="1.a" date-time="2022-07-11T08:23:31.074Z" user="sameer">1.a</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-11T08:23:31.074Z" user="sameer">First published version</note>
-          <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:45:30.942Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
-          <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T16:45:30.58Z" user="john">Added material to introduction, notes, and bibliography in line with the other texts of the group.</note>
-          <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:25:41.735Z" user="john">Edits to text and notes re āyurdatte/-dade.</note>
-          <note type="updated" update="text-version" value="1.2.3" date-time="2022-10-01T12:21:05.37Z" user="john">Edits on variants in 2 notes.</note>
+        <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:45:30.942Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
+        <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T16:45:30.58Z" user="john">Added material to introduction, notes, and bibliography in line with the other texts of the group.</note>
+        <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:25:41.735Z" user="john">Edits to text and notes re āyurdatte/-dade.</note>
+        <note type="updated" update="text-version" value="1.2.3" date-time="2022-10-01T12:21:05.37Z" user="john">Edits on variants in 2 notes.</note>
+          <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-03T10:11:35.733Z" user="john">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
