--- a/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
@@ -4,21 +4,16 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
-          Manual</title>
+        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual (3)</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇīkalpasahitā</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas pa</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
-          pa</title>
-        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
-          Dhāraṇī with Its Ritual Manual</title>
+        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata­uṣṇīṣavijayā­nāma­dhāraṇīkalpasahitā</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
         <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
         <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
+        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
@@ -30,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.2 <date>2022</date>
+                <edition>v 1.2.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-30T15:31:25.734Z" user="admin">30/09/2022 15:31:25</note>
+        <note type="lastUpdated" date-time="2022-10-03T10:11:55.801Z" user="admin">03/10/2022 10:11:55</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
@@ -99,9 +94,10 @@
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:49:05.618Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:34:32.228Z" user="sameer">1.a</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:34:32.228Z" user="sameer">First published version</note>
-          <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:46:37.48Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
-          <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T19:04:06.298Z" user="john">Material added to introduction, notes, and bibliography in line with the other texts in this group.</note>
-          <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:31:21.721Z" user="john">Further minor edits.</note>
+        <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:46:37.48Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
+        <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T19:04:06.298Z" user="john">Material added to introduction, notes, and bibliography in line with the other texts in this group.</note>
+        <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:31:21.721Z" user="john">Further minor edits.</note>
+          <note type="updated" update="text-version" value="1.2.3" date-time="2022-10-03T10:11:47.564Z" user="john">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
