--- a/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/placeholders/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -15,9 +15,10 @@
                 <consultant role="advisor" ref="eft:person-364">Bhikṣuṇī Dr. Heng Ching Shih</consultant>
                 <consultant role="projectManager" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</consultant>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2021</date>
+                <edition>v 0.0.17 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.b">
@@ -36,19 +37,33 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-05T07:19:41.745Z" user="admin">05/10/2022 07:19:41</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:51:23.439Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-12T09:25:52.53Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-12T09:26:09.308Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-04-12T09:27:16.108Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-05-12T08:00:48.195Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.8" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.9" date-time="2021-10-06T08:26:58.926Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-03-08T09:13:28.001Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.c" date-time="2022-08-25T13:49:12.413Z" user="line-tofte">2.c</note>    <note type="updated" update="text-version" value="0.0.15" date-time="2022-08-25T13:49:12.413Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.b" date-time="2022-10-05T07:19:33.758Z" user="line-tofte">2.b</note>    <note type="updated" update="text-version" value="0.0.16" date-time="2022-10-05T07:19:33.758Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-10-05T07:20:51.35Z" user="admin">05/10/2022 07:20:51</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:51:23.439Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-12T09:25:52.53Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-12T09:26:09.308Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-04-12T09:27:16.108Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-05-12T08:00:48.195Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2021-10-05T14:26:36.18Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2021-10-06T08:26:58.926Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-03-08T09:13:01.178Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-03-08T09:13:28.001Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-15T13:17:00.574Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-16T12:10:21.102Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-23T12:08:51.814Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-08-25T13:49:12.413Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2022-08-25T13:49:12.413Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-10-05T07:19:33.758Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2022-10-05T07:19:33.758Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.17" date-time="2022-10-05T07:20:43.383Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
