--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -30,9 +30,11 @@
         <consultant role="dharmaMaster" ref="eft:person-335">Phakchok Rinpoche</consultant>
         <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
         <author role="translatorEng" ref="eft:person-319">Ryan Conlon</author>
+        <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+        <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -66,7 +68,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-08-01T07:55:31.044Z" user="admin">01/08/2022 07:55:31</note>
+        <note type="lastUpdated" date-time="2022-10-05T13:25:27.306Z" user="admin">05/10/2022 13:25:27</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -98,7 +100,8 @@
         <note type="updated" update="translation-status" value="2" date-time="2022-08-01T07:51:13.346Z" user="line-tofte">2</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-01T07:51:13.346Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-01T07:52:05.36Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-01T07:55:23.394Z" user="line-tofte">Auto (update-contributors)</note>
+        <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-01T07:55:23.394Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-05T13:25:19.25Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
