--- a/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -9,11 +9,12 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs lag stong mig stong gi cho ga zhib mo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa' 'phags pa spyan ras gzigs dbang phyug lag pa stong dang mig stong dang ldan pa'i cho ga zhib mo/</title>
                 <title type="otherTitle" xml:lang="zh">《千手千眼觀世音菩薩詳軌》（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
-                <author role="translatorMain" ref=""/>
+                <author role="translatorMain" ref="eft:team-86"/>
+                <author role="translatorEng" ref="eft:person-214">Joshua Capitanio</author>
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,12 +33,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-06T08:41:17.047Z" user="admin">06/10/2022 08:41:17</note>
+                <note type="lastUpdated" date-time="2022-10-06T08:54:48.236Z" user="admin">06/10/2022 08:54:48</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:42:16.581Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-09-27T14:00:41.19Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-09-27T14:00:41.19Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-06T08:41:10.984Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-06T08:41:10.984Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-06T08:54:46.133Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
