--- a/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -10,11 +10,12 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Thousand-Armed, Thousand-Eyed, Avalokiteśvara</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa' spyan ras gzigs dbang phyug phyag stong spyan stong dang ldan pa thogs pa mi mnga' ba'i thugs rje chen po'i sems rgya cher yongs su rdzogs pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="zh">《千手千眼觀世音菩薩陀羅尼》（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
-                <author role="translatorMain" ref=""/>
+                <author role="translatorMain" ref="eft:team-86"/>
+                <author role="translatorEng" ref="eft:person-214">Joshua Capitanio</author>
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,13 +43,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-06T08:57:42.092Z" user="admin">06/10/2022 08:57:42</note>
+                <note type="lastUpdated" date-time="2022-10-06T08:58:19.735Z" user="admin">06/10/2022 08:58:19</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:43:01.139Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:43:38.955Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-09-27T13:59:49.34Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-27T13:59:49.34Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-06T08:57:36.017Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-06T08:57:36.017Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-06T08:58:17.631Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
