--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryādbhutadharmaparyāyanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-08T09:50:57.169Z" user="admin">08/03/2022 09:50:57</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-10-06T09:06:41.484Z" user="admin">06/10/2022 09:06:41</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
