--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rmad du byung ba'i chos kyi rnam grangs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">adbhutadharmaparyāya</title>
                 <title type="mainTitle" xml:lang="en">The Marvelous Dharma Discourse</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmad du byung ba zhes bya ba'i chos kyi rnam grangs</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">adbhutadharmaparyāya</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rmad du byung ba'i chos kyi rnam grangs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryādbhutadharmaparyāyanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmad du byung ba zhes bya ba'i chos kyi rnam grangs</title>
+                <author role="translatorMain" ref="eft:team-87"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +31,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-06T09:06:41.484Z" user="admin">06/10/2022 09:06:41</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-10-06T09:07:19.861Z" user="admin">06/10/2022 09:07:19</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-06T09:07:17.769Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
