--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -10,9 +10,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryādbhutadharmaparyāyanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmad du byung ba zhes bya ba'i chos kyi rnam grangs</title>
                 <author role="translatorMain" ref="eft:team-87"/>
+                <consultant role="dharmaMaster" ref="eft:person-423">Geshe Samten Gyatso</consultant>
+                <author role="translatorEng" ref="eft:person-424">Bianba Deji</author>
+                <author role="translatorEng" ref="eft:person-371">Daigengna Duoer</author>
+                <editor role="proofreader" ref="eft:person-371">Daigengna Duoer</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -31,12 +35,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-06T09:07:19.861Z" user="admin">06/10/2022 09:07:19</note>
+                <note type="lastUpdated" date-time="2022-10-06T09:08:31.688Z" user="admin">06/10/2022 09:08:31</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-06T09:07:17.769Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-06T09:08:29.584Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
