--- a/translations/kangyur/placeholders/087-012_toh506,885-the_incantation_of_the_sovereign_practice_of_the_supreme_secret_found_especially_in_the_great_jewel_palace.xml
+++ b/translations/kangyur/placeholders/087-012_toh506,885-the_incantation_of_the_sovereign_practice_of_the_supreme_secret_found_especially_in_the_great_jewel_palace.xml
@@ -15,10 +15,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmaṇivipulavimāna­supratiṣṭhitaguhya­paramarahasyakalparāja­nāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-087-012"/>
                 <date/>
             </publicationStmt>
@@ -43,9 +43,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-01T09:12:55.538Z" user="admin">01/09/2022 09:12:55</note>
+                <note type="lastUpdated" date-time="2022-10-06T09:51:15.525Z" user="admin">06/10/2022 09:51:15</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-09-01T09:12:47.789Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-09-01T09:12:47.789Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:51:09.451Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:51:09.451Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
