--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -9,6 +9,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos nyid rang gi ngo bo stong pa nyid las mi g.yo bar tha dad pa thams cad la snang ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmatāsvabhāva­śūnyatācalapratisarvāloka­sūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos nyid rang gi ngo bo stong pa nyid las mi g.yo bar tha dad pa thams cad la snang ba'i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">chos nyid mi g.yo ba'i mdo</title>
                 <author role="translatorMain" ref="eft:team-27"/>
                 <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
                 <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
@@ -17,7 +18,7 @@
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -37,13 +38,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-03T10:08:04.01Z" user="admin">03/10/2022 10:08:04</note>
+                <note type="lastUpdated" date-time="2022-10-08T11:50:15.019Z" user="admin">08/10/2022 11:50:15</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-03T10:08:01.909Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-08T11:50:12.797Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
