--- a/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
+++ b/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
@@ -4,30 +4,28 @@
     <teiHeader> 
         <fileDesc> 
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshong dpon bzang skyong gis zhus pa</title>
-                <title type="mainTitle" xml:lang="bo">ཚོང་དཔོན་བཟང་སྐྱོང་གིས་ཞུས་པ།</title>
                 <title type="mainTitle" xml:lang="en">The Questions of Bhadrapāla the Merchant</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Bhadra­pāla­śreṣṭhi­paripṛcchā</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཚོང་དཔོན་བཟང་སྐྱོང་གིས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshong dpon bzang skyong gis zhus pa zhes bya ba theg pa chen
-                    po’i mdo</title>
+                <title type="mainTitle" xml:lang="bo">ཚོང་དཔོན་བཟང་སྐྱོང་གིས་ཞུས་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshong dpon bzang skyong gis zhus pa</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Questions of Bhadrapāla the Merchant”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­bhadra­pāla­śreṣṭhi­paripṛcchā­nāma­mahā­yāna­sūtra</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཚོང་དཔོན་བཟང་སྐྱོང་གིས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshong dpon bzang skyong gis zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rnam par shes pa 'pho ba'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-16">
                     Translated by Karen Liljenberg and Ulrich Pagel<lb/> under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-115">Dr Karen Liljenberg</author>
                 <author role="translatorEng" ref="contributors.xml#person-116">Dr Ulrich Pagel</author>
-            <editor role="TEImarkupEditor" ref="contributors.xml#person-253">Michael Engle</editor>
+                <editor role="TEImarkupEditor" ref="contributors.xml#person-253">Michael Engle</editor>
                 <editor role="externalReviewer" ref="contributors.xml#person-165">Robert Miller</editor>
                 <editor role="copyEditor" ref="contributors.xml#person-31">Casey Kemp</editor>
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-115">Dr. Karen Liljenberg</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-115">Dr. Karen Liljenberg</consultant> 
             </titleStmt>
             <editionStmt>
-                <edition>v 1.38.12 <date>2022</date>
+                <edition>v 1.38.13 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,23 +61,24 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-10T18:30:58.496Z" user="admin">10/07/2022 18:30:58</note>
-            <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37" date-time="2019-06-18T15:53:53.155Z" user="celso">v 1.37 2019</tei:note>
-<tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.2" date-time="2020-04-30T21:32:41.64Z" user="celso">corrected typo in glossary entry: rgyal po'i khab</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.38.1" date-time="2020-08-04T16:31:42.817Z" user="john">changed text and glossary regarding Kalandakanivāsa.</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.38.2" date-time="2020-08-05T11:07:16.554Z" user="john">Typo corrected</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.3" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.4" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.5" date-time="2021-01-04T21:04:44.938Z" user="laura">Updated colophon to Bandé</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.6" date-time="2021-01-13T09:23:37.481Z" user="mike">1.38.6</tei:note>
+                <note type="lastUpdated" date-time="2022-10-08T11:52:46.795Z" user="admin">08/10/2022 11:52:46</note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37" date-time="2019-06-18T15:53:53.155Z" user="celso">v 1.37 2019</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.2" date-time="2020-04-30T21:32:41.64Z" user="celso">corrected typo in glossary entry: rgyal po'i khab</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.38.1" date-time="2020-08-04T16:31:42.817Z" user="john">changed text and glossary regarding Kalandakanivāsa.</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.38.2" date-time="2020-08-05T11:07:16.554Z" user="john">Typo corrected</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.3" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.4" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.5" date-time="2021-01-04T21:04:44.938Z" user="laura">Updated colophon to Bandé</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.6" date-time="2021-01-13T09:23:37.481Z" user="mike">1.38.6</tei:note>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.7" date-time="2021-02-10T00:46:04.901Z" user="celso">“scholar” to “preceptor”</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.8" date-time="2022-01-04T21:45:28.35Z" user="celso">karma to karman in Skt. field glossary</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.9" date-time="2022-02-15T16:57:00.571Z" user="celso">Corrected a &lt;title&gt; tag</tei:note>
-    <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</tei:note>
-    <note type="updated" update="text-version" value="1.38.11" date-time="2022-06-27T20:28:57.223Z" user="martina-cotter">minor update</note>
-    <note type="updated" update="text-version" value="1.38.12" date-time="2022-07-10T18:30:54.694Z" user="john">Harmonization of trailer and colophon</note>
-</notesStmt>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.8" date-time="2022-01-04T21:45:28.35Z" user="celso">karma to karman in Skt. field glossary</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.9" date-time="2022-02-15T16:57:00.571Z" user="celso">Corrected a &lt;title&gt; tag</tei:note>
+                <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</tei:note>
+                <note type="updated" update="text-version" value="1.38.11" date-time="2022-06-27T20:28:57.223Z" user="martina-cotter">minor update</note>
+                <note type="updated" update="text-version" value="1.38.12" date-time="2022-07-10T18:30:54.694Z" user="john">Harmonization of trailer and colophon</note> 
+                <note type="updated" update="text-version" value="1.38.13" date-time="2022-10-08T11:52:44.612Z" user="john">Auto (update-titles)</note> 
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <!--
