--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -4,16 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal mtshan rtse mo'i dpung rgyan gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dhvajāgrakeyūradhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Arm Bracelet Atop the Standard</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal mtshan gyi rtse mo'i dpung rgyan ces bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">dhvajāgrakeyūradhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal mtshan rtse mo'i dpung rgyan gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadhvajāgrakeyūranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal mtshan gyi rtse mo'i dpung rgyan ces bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadhvajāgrakeyūranāmadhāraṇī</title>
+                <author role="translatorMain" ref="eft:team-89"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +40,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-11T10:45:45.167Z" user="admin">11/10/2022 10:45:45</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-10-11T10:47:41.213Z" user="admin">11/10/2022 10:47:41</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-11T10:47:37.379Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
