--- a/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
+++ b/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Summary of the View</title>
                 <title xml:lang="bo" type="mainTitle">ལྟ་བ་མདོར་བསྡུས་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">lta ba mdor bsdus pa/</title>
-                <title xml:lang="en" type="mainTitle">A Summary of the View</title>
                 <title xml:lang="bo" type="longTitle">ལྟ་བ་མདོར་བསྡུས་པ་ཞེས་བྱ་བ།</title>
                 <title xml:lang="Bo-Ltn" type="longTitle">lta ba mdor bsdus pa zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-90"/>
+                <author role="translatorEng" ref="eft:person-31">Casey Kemp</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,10 +34,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-11T13:10:55.201Z" user="admin">11/10/2022 13:10:55</note>
+                <note type="lastUpdated" date-time="2022-10-11T13:11:39.912Z" user="admin">11/10/2022 13:11:39</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-2303-2325_PH_new_v2.4.xml" date-time="2021-11-02T13:47:33.72Z" user="admin"/>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-11T13:10:50.853Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-10-11T13:10:50.853Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-11T13:11:38.41Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
